Announcement section complete and containers are no longer overflowing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .container {
     display: grid;
-    grid-template-columns: 1.5fr 4fr;
+    grid-template-columns: 1.2fr 4fr;
     grid-template-rows: 1fr 5fr;
     height:100vh;
     width:auto;
@@ -17,19 +17,23 @@
 .sidebar {
     background-color: rgb(0, 132, 255);
     color:white;
-    grid-column: 1 / 2;
-    grid-row: 1/3;
-    display: grid;
-    grid-template-rows: 1fr 3.5fr 3fr;
+    display: flex;
+    flex-direction: column;
     padding-left: 10px;
     padding-right: 10px;
-    gap:10px;
     font-size: 0.7em;
+    height:100%;
+    grid-row: 1 / 3;
+    justify-content: top;
 }
 
 .icon {
     filter: invert(100%);
     padding-right: 10px;
+}
+
+.top-options {
+    margin-bottom:30px;
 }
 
 li {
@@ -51,6 +55,8 @@ li {
     font-size: 0.7em;
     align-items: center;
     justify-content: left;
+    margin-top: 20px;
+    margin-bottom: 30px;
 
 }
 
@@ -159,6 +165,122 @@ li {
     background-color: rgb(222, 231, 243);
     box-shadow: 0px 0px 5px inset grey;
     display:grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
     padding:20px;
+    font-size: 0.7em;
+    padding-top:30px;
+}
+
+.project-container {
+    display: grid;
+    grid-template-rows: 170px 170px 170px;
+    grid-template-columns: repeat(2, minmax(200px, 250px));
+    gap:20px;
+}
+
+.projects-title, .announce-main-title,.trend-title {
+    margin-bottom: 20px;
+    font-size: 0.7em;
+}
+
+.projects {
+    border-radius: 5px;
+    height:170px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    box-shadow: 1px 1px 3px rgb(160, 160, 160);
+}
+
+.project-textbox {
+    background-color: white;
+    width:100%;
+    height: 100%;
+    font-size: 0.7em;
+    padding:30px 10px 30px 10px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.project-title {
+    font-size:0.8em;
+    padding-bottom: 10px;
+}
+
+.project-description {
+    font-size: 0.6em;
+    max-height: 60px;
+    overflow:hidden;
+}
+
+.project-icon-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    padding-top: 10px;
+}
+
+.project-icon {
+   margin-right: 10px;
+}
+
+.orange-stripe {
+    background-color: rgb(255, 199, 78);
+    width:10px;
+    height:100%;
+}
+
+.right-side-bar {
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.announcement-container, .trend-container {
+    margin:0px 10px 0px 20px;
+}
+
+.announcements {
+    background-color: white;
+    height: 240px;
+    width: auto;
+    border-radius: 5px;
+    margin-top:20px;
+    box-shadow: 1px 1px 3px rgb(160, 160, 160);
+    padding-left:20px;
+    padding-right: 20px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.announce-title {
+    font-size: 0.4em;
+    text-wrap: nowrap;
+}
+
+.announce-description {
+    font-size: 0.35em;
+    overflow: hidden;
+    max-height: 40px;
+}
+
+.trend-title {
+    margin-top: 10px;
+}
+
+.trending {
+    background-color: white;
+    height: 240px;
+    width: auto;
+    border-radius: 20px;
+    margin-top:20px;
+    box-shadow: 1px 1px 3px rgb(160, 160, 160);
+}
+
+hr {
+    margin:10px;
 }
